# badpascal

./: .gitignore  CMakeLists.txt  LICENSE  afsmm  build.sh  data.cpp  lexer.cpp  lexer.fs.cpp  lexer_base.cpp  main.cpp  parse_base.cpp  parser.cpp  put.csv  symtable.cpp  tests.cpp
DOCUMENTOS/: FASE 2.odt  LEEME.rtf
fsmm/: CMakeLists.txt  main.cpp
helper/: .~lock.out.csv#  .~lock.producciones.csv#  a.out  atoms.cpp  out.csv  out.ods  producciones.csv  producciones.txt
include/: data.h  lexer.h  lexer_base.h  parse_base.h  parser.h  symtable.h
tests/: keywordstring.pas  out.csv
